--- a/src/javascript/ManageRoles/ManageRoles.scss
+++ b/src/javascript/ManageRoles/ManageRoles.scss
@@ -40,12 +40,12 @@
 .roles_member_type {
     font-size: 0.75em;
     text-transform: uppercase;
-    color: var(--color-text-secondary, #777);
+    color: var(--color-text-secondary, #555);
     margin-left: 8px;
 }
 
 .roles_empty {
-    color: var(--color-text-secondary, #777);
+    color: var(--color-text-secondary, #555);
     font-style: italic;
     font-size: 0.9em;
 }
